--- a/default_specification.yml
+++ b/default_specification.yml
@@ -93,7 +93,8 @@ target: "_top"
 
 ## This is the url to a loader animation which is displayed while the
 ## calendar loads events.
-loader: "/img/loaders/circular-loader.gif"
+# NOTE: (hard-coded) URL prefix (open-web-calendar)
+loader: "/open-web-calendar/img/loaders/circular-loader.gif"
 
 ## Choose which tab to display when the calendar opens.
 tab: "month"
