--- a/default_specification.yml
+++ b/default_specification.yml
@@ -144,6 +144,10 @@ contributing: "https://github.com/niccokunzmann/open-web-calendar/#contributing"
 ## This is a link to the translations page
 translate: "https://hosted.weblate.org/engage/open-web-calendar/"
 
+## Do not show events with a status listed here
+hide_when_status:
+#  - "TENTATIVE"
+
 ###################### You will probably not change this. ######################
 ##
 ## The template is the file which shows the calendar.
